--- a/apps/gallery/templates/gallery/index.html
+++ b/apps/gallery/templates/gallery/index.html
@@ -14,7 +14,7 @@
     {% include 'medium_heading.html' with title='Portfolios' %}
     <div class="category-gallery grid">
     {% for category in categories %}
-        <a class="sliding" href="{% url 'gallery:category' slug=category.slug %}" {% if category.order %}style="order:{{ category.order }}"{% endif %}>
+        <a class="sliding" href="{% url 'gallery:category' slug=category.slug %}" {% if category.order %}style="order:{{ category.priority }}"{% endif %}>
             <div class="cover-wrap">
                 {% if category.cover %}
                     <img class="cover" src="{{ category.cover.thumbnail_1x.url }}" srcset="{{ category.cover.thumbnail_1x.url }}, {{ category.cover.thumbnail_2x.url }} 2x" style="object-position:{{ category.cover.position }}">
@@ -34,7 +34,7 @@
     {% include 'medium_heading.html' with title='Trips and Destinations' %}
     <div class="trip-gallery grid">
     {% for trip in trips_shown %}
-        <a class="sliding" href="{% url 'gallery:trip' slug=trip.slug %}" {% if trip.order %}style="order:-{{ trip.order }}"{% endif %}>
+        <a class="sliding" href="{% url 'gallery:trip' slug=trip.slug %}" {% if trip.order %}style="order:-{{ trip.priority }}"{% endif %}>
             <div class="cover-wrap">
                 {% if trip.cover %}
                     <img class="cover" src="{{ trip.cover.thumbnail_1x.url }}" srcset="{{ trip.cover.thumbnail_1x.url }}, {{ trip.cover.thumbnail_2x.url }} 2x">
