added filter system

--- a/apps/journal/static/journal/css/all.scss
+++ b/apps/journal/static/journal/css/all.scss
@@ -10,3 +10,8 @@
 @mixin xl-up {
     @media (min-width: 1200px) { @content; }
 }
+
+
+@import "entry";
+@import "entry-gallery";
+@import "entry-fields";
