--- a/apps/journal/templates/journal/tag_styling.html
+++ b/apps/journal/templates/journal/tag_styling.html
@@ -1,8 +1,8 @@
 {% spaceless %}
 {% if tag.icon and tag.category.verbose == 'I' %}
-<img src="{{ tag.icon.url }}" class="tag-icon category-{{ tag.shown_category }}">
+<img src="{{ tag.icon.url }}" class="tag-icon category-{{ tag.shown_category }}" title="{{ tag.title }}">
 {% elif tag.icon and tag.category.verbose == 'B' %}
-<img src="{{ tag.icon.url }}" class="tag-icon category-{{ tag.shown_category }}"><span class="tag-text both category-{{ tag.shown_category }}">{{ tag.short_name }}</span>
+<img src="{{ tag.icon.url }}" class="tag-icon category-{{ tag.shown_category }}" title="{{ tag.title }}"><span class="tag-text both category-{{ tag.shown_category }}">{{ tag.short_name }}</span>
 {% else %}
 <span class="tag-text category-{{ tag.shown_category }}">{{ tag.short_name }}</span>
 {% endif %}
