--- a/apps/gallery/templates/gallery/trip.html
+++ b/apps/gallery/templates/gallery/trip.html
@@ -15,7 +15,9 @@
 {% endif %}
 
 {% if journal_available %}
-    <p class="">This trip has a journal entry associated to it, read it <a href="{{ journal_link }}">here</a>.</p>
+    <p class=""><a href="{{ journal_link }}">This trip has a journal entry associated to it, read it here.</a></p>
+    <div class="spacer small"></div>
+    <div class="spacer small"></div>
 {% endif %}
 
 {% if images %}
