--- a/apps/journal/templates/journal/filter.html
+++ b/apps/journal/templates/journal/filter.html
@@ -1,9 +1,10 @@
 {% extends 'journal/main.html' %}
 
+{% block content_title %}
+    {% include 'large_heading.html' with title=title %}
+{% endblock content_title %}
+
 {% block content_body %}
-
-<div class="spacer small"></div>
-
 
 <p>The filter for entries including 
 {% for query in queries %}{% if query is queries|first %}{% elif query is queries|last %} and {% else %}, {% endif %}<i>{{ query.name }}</i>{% endfor %}
@@ -11,7 +12,7 @@ yielded {{ queries_n }} result{{ queries_n|pluralize:",s" }}.
 </p>
 
 
-<div class="spacer small"></div>
+<div class="spacer medium"></div>
 
 {% include 'journal/entry_table.html' with entries=entries columns=columns %}
 
