quick fix for layouting of gallerys

--- a/apps/gallery/static/gallery/css/_categories.scss
+++ b/apps/gallery/static/gallery/css/_categories.scss
@@ -39,6 +39,7 @@
 
     .title {
         position: absolute;
+        word-wrap: break-word;
         background: rgba(237, 184, 139, .75);
         padding: 10px;
         text-align: center;
