--- a/apps/gallery/static/gallery/css/_trips.scss
+++ b/apps/gallery/static/gallery/css/_trips.scss
@@ -54,6 +54,7 @@
 
     .title {
         position: absolute;
+        word-wrap: break-word;
         max-width: 80%;
         background: rgba(237, 184, 139, .75);
         padding: 10px;
