--- a/apps/gallery/static/gallery/css/_trips.scss
+++ b/apps/gallery/static/gallery/css/_trips.scss
@@ -3,7 +3,7 @@
     grid-template-columns: repeat(auto-fill, 150px);
     grid-auto-rows: 150px;
 
-    @include l-up {
+    @include m-up {
         grid-template-columns: repeat(auto-fill, 200px);
         grid-auto-rows: 200px;
     }
