added photostream app

--- a/agimpel_com/templates/menu.html
+++ b/agimpel_com/templates/menu.html
@@ -19,6 +19,7 @@
                 <ul>
                     <li><a class="" href="/"><i class="fa-fw fas fa-home"></i> Home</a></li>
                     <li><a class="" href="/gallery"><i class="fa-fw fas fa-camera"></i> Gallery</a></li>
+                    <li><a class="" href="/photostream"><i class="fa-fw fas fa-images"></i> Photostream</a></li>
                     <li><a class="" href="/journal"><i class="fa-fw fas fa-route"></i> Journal</a></li>
                     <li><a class="" href="/projects"><i class="fa-fw fas fa-briefcase"></i> Projects</a>
                     <li><a class="show-hm" href="/about"><i class="fa-fw fas fa-user"></i> About</a>
