fixed logo and home background rotation

--- a/agimpel_com/templates/menu.html
+++ b/agimpel_com/templates/menu.html
@@ -47,7 +47,7 @@
                 <table>
                     <tr>
                         <td>
-                            <img src="/static/img/logo.png">
+                            <img src="/static/img/logo_transparency.svg">
                         </td>
                         <td>
                             <p>
