--- a/apps/basic/static/basic/css/all.scss
+++ b/apps/basic/static/basic/css/all.scss
@@ -22,11 +22,11 @@
     width: 100%;
     min-height: 500px;
     height: 100vh;
-    background-image: url("home.jpg");
     background-size: cover;
     animation: animatedBackground 30s ease-in-out alternate infinite;
     animation-delay: -15s;
-
+    transition: background 200ms ease-in-out 300ms;
+    
     @include m-up {
         background-size: 135%;
     }
@@ -43,9 +43,18 @@
     }
 }
 
-#box-wrapper {
+#index-wrapper {
     width: 95%;
     height: 100%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#box-wrapper {
+    width: 95%;
+    height: 95%;
     max-width: 600px;
     margin: auto;
     display: flex;
@@ -59,7 +68,8 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
+    margin-top: 30px;
     text-align: center;
 
     p {
@@ -81,8 +91,8 @@
     display: table;
     flex: 1;
     width: 100%;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     cursor: pointer;
 
     &:hover {
@@ -117,6 +127,79 @@
         
         @include m-up {
             font-size: 40px;
+        }
+    }
+}
+
+#background-switcher-wrapper {
+
+    @include m-up {
+        // visibility: visible;
+        #background-switcher {
+            place-self: flex-end !important; 
+        }
+    }
+    // visibility: hidden;
+
+    width: 100%;
+    height: 5%;
+    min-height: 60px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+
+    #background-switcher {
+
+        place-self: center;
+
+        #switcher-top {
+            display: table;
+            width: 200px;
+
+            span {
+                display: table-cell;
+                font-size: 20px;
+                text-align: center;
+                font-family: 'Montserrat', sans-serif;
+                color: white;
+                // mix-blend-mode: exclusion;
+            }
+
+            #switcher-backward, #switcher-forward {
+                font-size: 30px;
+                cursor: pointer;
+            }
+
+            #switcher-backward {
+                text-align: right;
+            }
+
+            #switcher-forward {
+                text-align: left;
+            }
+
+            #switcher-counter {
+                width: 75px;
+                margin-left: 10px;
+                margin-right: 10px;
+            }
+        }
+
+        #switcher-bottom {
+            width: 200px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            span {
+                place-self: center;
+                font-size: 18px;
+                text-align: center;
+                font-family: 'Montserrat', sans-serif;
+                color: white;
+                // mix-blend-mode: exclusion;
+            }
         }
     }
 }
