--- a/apps/gallery/static/gallery/css/_image_caption.scss
+++ b/apps/gallery/static/gallery/css/_image_caption.scss
@@ -20,7 +20,7 @@
 
     .image_more {
         a {
-            text-decoration: underline;
+            color: #edb88b;
             font-family: 'Montserrat', serif;
             font-weight: normal;
         }
@@ -28,18 +28,35 @@
 }
 
 .single {
+
+    text-align: center;
     
     .image_title {
         font-family: 'Montserrat', serif;
-        font-size: 24px;
+        font-size: 16px;
         padding-bottom: 2px;
         font-weight: normal;
+
+        @include m-up {
+            font-size: 24px;
+        }
     }
+
+    .image_date {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 8pt;
+        font-weight: normal;
+        line-height: 1.35;
+
+        @include m-up {
+            font-size: 10pt;
+        }
+    }            
 
     .image_exifinfo {
         span {
             font-family: 'Montserrat', sans-serif;
-            font-size: 10pt;
+            font-size: 8pt;
             font-weight: normal;
             line-height: 1.35;
             padding-right: .75em;
@@ -51,13 +68,34 @@
                 }
             }
 
-            
+            @include m-up {
+                font-size: 10pt;
+            }
         }
     }
 
     .image_description {
         font-family: 'Montserrat', serif;
         font-weight: normal;
+        font-size: 10pt;
+
+        @include m-up {
+            font-size: 12pt;
+        }
+
+        a {
+            text-decoration: underline;
+        }
+    }
+
+    .image_tags {
+        font-family: 'Montserrat', serif;
+        font-weight: normal;
+        font-size: 10pt;
+
+        @include m-up {
+            font-size: 12pt;
+        }
 
         a {
             text-decoration: underline;
