--- a/apps/gallery/static/gallery/css/_portfolios.scss
+++ b/apps/gallery/static/gallery/css/_portfolios.scss
@@ -1,10 +1,13 @@
-.category-gallery.grid {
+.portfolio-gallery.grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 150px);
-    grid-auto-rows: 150px;
+    grid-template-columns: repeat(auto-fill, 100%);
+    grid-auto-rows: 100px;
 
     @include m-up {
-        grid-template-columns: repeat(auto-fill, 200px);
+        grid-auto-rows: 150px;
+    }
+
+    @include l-up {
         grid-auto-rows: 200px;
     }
 
@@ -34,28 +37,9 @@
         z-index: 10;
     }
 
-    .more {
-        background: rgba(237, 184, 139, .75);
-        cursor: pointer;
-
-        span {
-            background: white;
-            color:  rgba(237, 184, 139, .75);
-        }
-    }
-
-    .gallery-more {
-        order: 998;
-
-        &.hidden {
-            display: none;
-        }
-    }
-
     .title {
         position: absolute;
         word-wrap: break-word;
-        max-width: 80%;
         background: rgba(237, 184, 139, .75);
         padding: 10px;
         text-align: center;
@@ -64,31 +48,16 @@
         transform: translate(-50%, -50%);
         font-family: 'Montserrat';
         font-weight: normal;
-        font-size: 12px;
+        font-size: 14px;
         color: white;
 
         @include s-up {
-          font-size: 14px;
+          font-size: 18px;
         }
         @include m-up {
-          font-size: 16px;
+          font-size: 24px;
         }
 
-    }
-
-    .gallery-hidden {
-        display: none;
-        order: 999;
-        transform: translateY(50px);
-        animation: come-in 0.8s ease forwards;
-
-        &:nth-child(odd) {
-            animation-duration: 0.6s;
-        }
-
-        &.shown {
-            display: block;
-        }
     }
 
 }
