--- a/apps/gallery/templates/gallery/trip.html
+++ b/apps/gallery/templates/gallery/trip.html
@@ -21,7 +21,7 @@
 {% endif %}
 
 {% if images %}
-    {% include 'gallery/gallery.html' with images=images %}
+    {% include 'gallery/gallery_trip.html' with images=images %}
 {% else %}
     <p>No images are available.</p>
 {% endif %}
