--- a/apps/gallery/static/gallery/css/_gallery.scss
+++ b/apps/gallery/static/gallery/css/_gallery.scss
@@ -39,11 +39,14 @@
     figure {
         width: 100%;
         height: 100%;
+        text-align: center;
 
         a {
             img {
-            width: 100%;
-            height: 100%;
+                max-height: 70vh;
+                max-width: 100%;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
 
