--- a/apps/gallery/templates/gallery/index.html
+++ b/apps/gallery/templates/gallery/index.html
@@ -6,23 +6,43 @@
 
 {% block content_body %}
 
-{% if not categories and not trips %}
+{% if not portfolios and not categories and not trips %}
     <span>No galleries set up.</span>
 {% endif %}
 
-{% if categories %}
+{% if portfolios %}
     {% include 'medium_heading.html' with title='Portfolios' %}
-    <div class="category-gallery grid">
-    {% for category in categories %}
-        <a class="sliding" href="{% url 'gallery:category' slug=category.slug %}" {% if category.order %}style="order:{{ category.priority }}"{% endif %}>
+    <div class="portfolio-gallery grid">
+    {% for portfolio in portfolios %}
+        <a class="sliding" href="{% url 'gallery:portfolio' slug=portfolio.slug %}" {% if portfolio.order %}style="order:{{ portfolio.priority }}"{% endif %}>
             <div class="cover-wrap">
-                {% if category.cover %}
-                    <img class="cover" src="{{ category.cover.thumbnail_1x.url }}" srcset="{{ category.cover.thumbnail_1x.url }}, {{ category.cover.thumbnail_2x.url }} 2x" style="object-position:{{ category.cover.position }}">
+                {% if portfolio.cover %}
+                    <img class="cover" src="{{ portfolio.cover.thumbnail_1x.url }}" srcset="{{ portfolio.cover.thumbnail_1x.url }}, {{ portfolio.cover.thumbnail_2x.url }} 2x" style="object-position:{{ portfolio.cover.position }}">
                 {% endif %}
-                <span class="title">{{ category.title }}</span>
+                <span class="title">{{ portfolio.title }}</span>
             </div>
         </a>
     {% endfor %}
+    </div>
+{% endif %}
+
+{% if categories or trips %}
+    <div class="spacer"></div>
+{% endif %}
+
+{% if categories %}
+    {% include 'medium_heading.html' with title='Categories' %}
+    <div class="category-gallery grid">
+        {% for category in categories %}
+            <a class="sliding" href="{% url 'gallery:category' slug=category.slug %}" {% if category.priority %}style="order:{{ category.priority }}"{% endif %}>
+                <div class="cover-wrap">
+                    {% if category.cover %}
+                        <img class="cover" src="{{ category.cover.thumbnail_1x.url }}" srcset="{{ category.cover.thumbnail_1x.url }}, {{ category.cover.thumbnail_2x.url }} 2x">
+                    {% endif %}
+                    <span class="title">{{ category.title }}</span>
+                </div>
+            </a>
+        {% endfor %}
     </div>
 {% endif %}
 
