--- a/apps/gallery/templates/gallery/portfolio.html
+++ b/apps/gallery/templates/gallery/portfolio.html
@@ -1,13 +1,13 @@
 {% extends 'gallery/main.html' %}
 
 {% block content_title %}
-    {% include 'large_heading.html' with title=category.title %}
+    {% include 'large_heading.html' with title=portfolio.title %}
 {% endblock content_title %}
 
 {% block content_body %}
 
 {% if images %}
-    {% include 'gallery/gallery_category.html' with images=images %}
+    {% include 'gallery/gallery_portfolio.html' with images=images %}
 {% else %}
     <p>No images are available.</p>
 {% endif %}
