--- a/apps/photostream/static/photostream/css/_gallery.scss
+++ b/apps/photostream/static/photostream/css/_gallery.scss
@@ -42,8 +42,10 @@
 
         a {
             img {
-            width: 100%;
-            height: 100%;
+                max-height: 70vh;
+                max-width: 100%;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
 
