--- a/apps/basic/static/basic/css/all.scss
+++ b/apps/basic/static/basic/css/all.scss
@@ -21,7 +21,7 @@
 #home-wrapper {
     width: 100%;
     min-height: 500px;
-    height: 100vh;
+    height: 100%;
     background-size: cover;
     animation: animatedBackground 30s ease-in-out alternate infinite;
     animation-delay: -15s;
@@ -144,7 +144,8 @@
     width: 100%;
     height: 5%;
     min-height: 60px;
-    margin: auto;
+    margin-top: auto;
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
     justify-content: left;
